Added input bar for grid size adjustment

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,12 +8,11 @@
     <script src="etch-a-sketch.js" defer></script>
 </head>
 <body>
-    <div class="inputBar">
-        <input>
-        <button>Go</button>
+    <div id="inputHeader">
+        <input id="inputBar">
+        <button id="inputButton">Go</button>
+        <div id="warning"></div>
     </div>
-    <div id="main">
-
-    </div>
+    <div id="main"></div>
 </body>
 </html>
